--- a/index.css
+++ b/index.css
@@ -123,5 +123,10 @@ body {
   margin: 3px 0 10px;
 }
 
+.card .contri-graph {
+    width: 100%;
+    max-height: 90px;
+    margin-top: 20px;
+}
 
 
